<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".common_activities.ChangePasswordActivity">

    <include layout="@layout/commontoolbar_back_titlesingle_menu"
        android:id="@+id/commontools"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/bp_margin_5"
        android:padding="@dimen/bp_margin_15">

        <EditText
            android:id="@+id/change_password_old_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:layout_marginTop="@dimen/bp_margin_15"
            android:background="@drawable/edit_field_border"
            android:hint="@string/old_password"
            android:paddingLeft="@dimen/bp_margin_8" />

        <EditText
            android:id="@+id/change_password_new_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:layout_marginTop="@dimen/bp_margin_15"
            android:background="@drawable/edit_field_border"
            android:hint="@string/new_password"
            android:paddingLeft="@dimen/bp_margin_8" />

        <EditText
            android:id="@+id/change_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:layout_marginTop="@dimen/bp_margin_15"
            android:background="@drawable/edit_field_border"
            android:hint="@string/conform_password"
            android:paddingLeft="@dimen/bp_margin_8" />

        <Button
            android:id="@+id/change_password_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_50"
            android:layout_margin="@dimen/margin_32"
            android:background="@drawable/roundcorner_green"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
