<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/parrot"
    android:layout_marginLeft="@dimen/bp_margin_5"
    android:layout_marginRight="@dimen/bp_margin_5"
    android:layout_marginTop="@dimen/bp_margin_5"
    android:id="@+id/inflator_appointment_relative"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/profile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/editprofile"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dr.N Suresh"
        android:textColor="#000"
        android:textSize="@dimen/bp_margin_11"
        android:layout_marginLeft="@dimen/bp_margin_10"
        android:textStyle="bold"
        android:layout_alignTop="@+id/profile"
        android:layout_toRightOf="@+id/profile"
        android:layout_toEndOf="@+id/profile"
        android:id="@+id/inflator_appointments_name_tv" />
    <TextView
        android:layout_width="@dimen/margin_150"
        android:layout_height="wrap_content"
        android:text="@string/mbbs_md"
        android:textSize="@dimen/bp_margin_10"
        android:layout_below="@+id/inflator_appointments_name_tv"
        android:layout_alignLeft="@+id/inflator_appointments_name_tv"
        android:layout_alignStart="@+id/inflator_appointments_name_tv"
        android:id="@+id/inflator_appointment_specialization" />
    <TextView
        android:layout_width="@dimen/margin_150"
        android:layout_height="wrap_content"
        android:text="@string/thu_27_aug_5_30pm"
        android:textSize="@dimen/bp_margin_10"
        android:layout_marginBottom="@dimen/bp_margin_5"
        android:layout_below="@+id/inflator_appointment_specialization"
        android:layout_alignLeft="@+id/inflator_appointment_specialization"
        android:layout_alignStart="@+id/inflator_appointment_specialization"
        android:id="@+id/inflator_appointments_date_time_tv" />
    <Button
        android:id="@+id/inflator_appointments_reschedule_bt"
        android:layout_width="@dimen/margin_70"
        android:layout_height="@dimen/bp_margin_20"
        android:text="@string/re_schedule"
        android:textSize="@dimen/bp_margin_8"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/roundcorner_green_thick"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/margin_25"/>
    <!--<View-->
        <!--android:layout_below="@+id/inflator_appointments_date_tv"-->
        <!--android:layout_width="match_parent"-->
        <!--android:background="@color/white"-->
        <!--android:layout_height="3dp"/>-->
</RelativeLayout>
</RelativeLayout>